force-app/main/default/objects/Competency_Rating__c/Competency_Rating__c.object-meta.xml
<CustomObject>
    <description>Detailed competency-specific ratings for interview feedback</description>
    <label>Competency Rating</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Competency Rating Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competency Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>