force-app/main/default/objects/Competency_Rating__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Specific comments for this competency rating</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>