force-app/main/default/objects/Competency_Rating__c/fields/Competency_Name__c.field-meta.xml
<CustomField>
    <fullName>Competency_Name__c</fullName>
    <description>Name of the competency being rated</description>
    <label>Competency Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Skills</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Problem Solving</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Cultural Fit</fullName>
            </value>
            <value>
                <fullName>Teamwork</fullName>
            </value>
            <value>
                <fullName>Adaptability</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Customer Focus</fullName>
            </value>
            <value>
                <fullName>Decision Making</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>