force-app/main/default/objects/Competency_Rating__c/fields/Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback__c</fullName>
    <description>Parent Interview Feedback record</description>
    <label>Interview Feedback</label>
    <referenceTo>Interview_Feedback__c</referenceTo>
    <relationshipLabel>Competency Ratings</relationshipLabel>
    <relationshipName>Competency_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>